2019-05-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/action_effector.cpp:
	- フォウルを受けた場合のコマンドロストに対してデバッグメッセージを
	出力しないように変更．確認のために，キックのみファウルによ
	るコマンドロスト情報を出力する．

2018-11-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- fullstate使用時に敵チーム情報が更新されていなかった不具合を修正

2018-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_config.cpp:
	* rcsc/coach/coach_config.h:
	* rcsc/common/audio_codec.cpp:
	* rcsc/common/audio_codec.h:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	- AudioCodecに暗号化用シフトパラメータを追加

2018-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/abstract_client.cpp:
	- zlib未インストール環境でのビルド不具合を修正

2017-12-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_smart_kick.cpp:
	- ボールの目標初速の範囲チェックを追加

2017-10-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/player_type_analyzer.cpp:
	- ヘテロ分析のバグ修正

2017-07-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/clang/clang_unum.h:
	- ワイルドカードを表す定数としてCLangUnumSet::Allを追加

2017-07-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_debug_client.cpp:
	- フォーマットの誤りを修正

2017-07-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	- hearによるボール情報更新ルールを追加

2017-07-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン番号文字列を更新

	* rcsc/geom/vector_2d.h:
	- dist(),dist2()のバリエーションを追加
	- 距離比較用ファンクタとしてDistCmpを追加

2017-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/logger.h:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	- Logger::TRAININGを追加．デバッグログファイルに訓練データを書き込
	む場合の利用を想定

2017-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/sample_data.cpp:
	- データ追加確認用メッセージをコメントアウト

2017-04-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp: