@@ -35,15 +35,15 @@
 
 #include "formation.h"
 
-#include "formation_bpn.h"
+//#include "formation_bpn.h"
 //#include "formation_cdt.h"
 #include "formation_dt.h"
-#include "formation_knn.h"
-#include "formation_ngnet.h"
-#include "formation_rbf.h"
-#include "formation_sbsp.h"
+//#include "formation_knn.h"
+//#include "formation_ngnet.h"
+//#include "formation_rbf.h"
+//#include "formation_sbsp.h"
 #include "formation_static.h"
-#include "formation_uva.h"
+//#include "formation_uva.h"
 
 #include <sstream>
 
@@ -76,15 +76,15 @@ Formation::create( const std::string & name )
     {
         ptr = creator();
     }
-    else if ( name == FormationBPN::NAME ) ptr = FormationBPN::create();
+    //else if ( name == FormationBPN::NAME ) ptr = FormationBPN::create();
     //else if ( name == FormationCDT::NAME ) ptr = FormationCDT::create();
     else if ( name == FormationDT::NAME ) ptr = FormationDT::create();
-    else if ( name == FormationKNN::NAME ) ptr = FormationKNN::create();
-    else if ( name == FormationNGNet::NAME ) ptr = FormationNGNet::create();
-    else if ( name == FormationRBF::NAME ) ptr = FormationRBF::create();
-    else if ( name == FormationSBSP::NAME ) ptr = FormationSBSP::create();
+    //else if ( name == FormationKNN::NAME ) ptr = FormationKNN::create();
+    //else if ( name == FormationNGNet::NAME ) ptr = FormationNGNet::create();
+    //else if ( name == FormationRBF::NAME ) ptr = FormationRBF::create();
+    //else if ( name == FormationSBSP::NAME ) ptr = FormationSBSP::create();
     else if ( name == FormationStatic::NAME ) ptr = FormationStatic::create();
-    else if ( name == FormationUvA::NAME ) ptr = FormationUvA::create();
+    //else if ( name == FormationUvA::NAME ) ptr = FormationUvA::create();
 
     return ptr;
 }
